<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/Categories"/>

    <item
        android:id="@+id/gift"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/Gift"/>

    <item
        android:id="@+id/single_Services"
        android:icon="@drawable/ic_baseline_card_giftcard_24"
        android:title="@string/service"/>
    <item
        android:id="@+id/contact"
        android:icon="@drawable/ic_baseline_contacts_24"
        android:title="@string/contact"/>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/Myaccount"/>
</menu>
